ui: Fix wrapping behaviour of headerlink (anchor links)
... hopefully without unwanted side effects.

--- a/static/cdedb.css
+++ b/static/cdedb.css
@@ -522,7 +522,7 @@ body.development {
    and also used on the event course list */
 a.headerlink {
     margin-left: 10px;
-    display: inline-block;
+    display: inline;
     color: #777;
     text-decoration: none;
     opacity: 0;
